fixed more layout problems

--- a/assets/_scss/_base.scss
+++ b/assets/_scss/_base.scss
@@ -19,7 +19,9 @@ body {
 }
 
 header{
-    padding: 0 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-bottom: 2.5%;
 
     @include gs-span(d, all);
 
@@ -29,6 +31,7 @@ header{
 
     aside{
         display: none;
+        @include gs-span(d, 4);
 
         @media(min-width:501px){
             display: block;
@@ -39,14 +42,11 @@ header{
 aside{
     font-size: $baseline/3;
     text-align: center;
-    margin-top: 10%;
     width: 100%;
     overflow: hidden;
 
     @media(min-width:501px){
         padding: 0 $baseline*1.5;
-        margin: 0;
-        @include gs-span(d, 4);
     }
 
     ul{
@@ -230,10 +230,6 @@ p{
 img{
     max-width: 100%;
     border-radius: 3px;
-}
-
-section { 
-    margin: $baseline 0;
 }
 
 article{
